# cat_command

./: cat.asm  cat.out
macos/: CMakeLists.txt  cat.c
macos/include/: syntax.h
macos/src/: cat.c  syntax.c
